Implement repeat functionality
Added SQL queries and methods to calculate the overall mark and dropping marks for character repeating
